--- a/components/mintmaker/base/external-secrets/kustomization.yaml
+++ b/components/mintmaker/base/external-secrets/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - pipelines-as-code-secret.yaml
+- brew-registry-redhat-io-pull-secret.yaml
 - registry-redhat-io-pull-secret.yaml
 - registry-stage-redhat-io-pull-secret.yaml
 namespace: mintmaker
